--- a/src/main/resources/templates/fragments/posts.html
+++ b/src/main/resources/templates/fragments/posts.html
@@ -4,16 +4,16 @@
 <body>
 <div th:fragment="posts">
 
-    <div class="starter-template panel" >
+    <div class="starter-template panel" th:each="post :${pager.posts}">
         <div class="panel-heading">
-            <h1><a >Title</a></h1>
-            <div >
+            <h1><a th:text="${post.title}" th:href="@{'/post/'+${post._id}}">Title</a></h1>
+            <div th:text="'Created: '+${#dates.format(post.createdDate,'dd-MMM-yyyy')}">
                 Created by
             </div>
-            <div><a >User</a>
+            <div><a>User</a>
             </div>
         </div>
-        <h3 class="panel-body" >Body</h3>
+        <h3 class="panel-body" th:text="${post.content}">Body</h3>
         <br></br>
     </div>
 
