--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,9 +8,12 @@
         <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
               th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
               rel="stylesheet" media="screen"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
         <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
                 th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+        <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+                th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 
         <link rel="stylesheet" th:href="@{/css/main.css}"
               />
