--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -12,23 +12,35 @@
 <div class="container my-2">
     <div class="card">
         <div class="card-body">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Launch demo modal
-            </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="editPostModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
+                            <form action="" method="POST" enctype="multipart/form-data">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Edit Post</h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <label>Title</label>
+                                        <input type="text" id="titleEdit" class="form-control"  name="title" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Content</label>
+                                        <input type="text" id="contentEdit" class="form-control"  name="content" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Date</label>
+                                        <input type="text" id="dateEdit" class="form-control"  name="date" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Author</label>
+                                        <input type="text" class="form-control" id="authorEdit" name="author" >
+                                    </div>
+                                </div>
+                            </form>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary">Save changes</button>
@@ -55,11 +67,11 @@
                             </thead>
                             <tbody>
                             <tr th:each="post : ${posts}">
-                                <td th:text="${post.title}" id="${post._id}"></td>
-                                <td th:text="${post.content}"></td>
+                                <td th:text="${post.title}" ></td>
+                                <td th:text="${post.content}" ></td>
                                 <td th:text="${#dates.format(post.createdDate,'dd-MMM-yyyy')}"></td>
                                 <td th:text="${post.author}"></td>
-                                <td><a th:href="@{/posts/edit/{id}(id=${post._id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+                                <td><a  class="btn btn-primary edit"><i class="fas fa-user-edit ml-2" data-toggle="modal" data-target="#editPostModal" ></i></a></td>
                                 <td><a th:href="@{/posts/delete/{id}(id=${post._id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
                             </tr>
                             </tbody>
