--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -25,7 +25,7 @@
                                 <div class="modal-body">
                                     <div class="form-group">
                                         <label>Title</label>
-                                        <input type="text" id="titleEdit" class="form-control"  name="title" required>
+                                        <input type="text" id="titleEdit" class="form-control title"  name="title" data-id="null" required>
                                     </div>
                                     <div class="form-group">
                                         <label>Content</label>
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Date</label>
-                                        <input type="text" id="dateEdit" class="form-control"  name="date" required>
+                                        <input type="text" id="dateEdit" class="form-control"  name="dateCreated" required>
                                     </div>
                                     <div class="form-group">
                                         <label>Author</label>
@@ -67,7 +67,7 @@
                             </thead>
                             <tbody>
                             <tr th:each="post : ${posts}">
-                                <td th:text="${post.title}" ></td>
+                                <td th:text="${post.title}" th:attr="postid = ${post._id}"></td>
                                 <td th:text="${post.content}" ></td>
                                 <td th:text="${#dates.format(post.createdDate,'dd-MMM-yyyy')}"></td>
                                 <td th:text="${post.author}"></td>
