--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -43,7 +43,7 @@
                             </form>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn btn-primary save">Save changes</button>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     <a href="/post/create" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Add Post</i></a>
                 </p>
-                <div class="col-md-10">
+                <div id="table" class="col-md-10">
                     <h2 th:case="null">No Posts yet!</h2>
                     <div th:case="*">
                         <table class="table table-striped table-responsive-md">
