--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -43,7 +43,7 @@
                             </form>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary save">Save changes</button>
+                            <button type="button" class="btn btn-primary saveEdit">Save changes</button>
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Author</label>
-                                    <select th:switch="${users}" class="form-control" aria-label="Default select example">
-                                        <option th:case="null">No user</option>
+                                    <select id="userId" th:switch="${users}" class="form-control" aria-label="Default select example">
+                                        <option th:case="null" >No user</option>
                                         <div th:case="*">
                                             <option selected>Open this select menu</option>
                                             <option th:each="user :${users}" th:value="${user._id}" th:text="${user.email}"> </option>
@@ -85,7 +85,7 @@
                         </form>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary save">Save changes</button>
+                            <button type="button" class="btn btn-primary saveCreate">Save changes</button>
                         </div>
                     </div>
                 </div>
