Modified sign up view and sign up ajax call

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,18 +12,24 @@
     <form class="form-signin" th:action="@{/login}" method="post">
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
         <div class="social-login">
-            <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span> </button>
-            <button class="btn google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign in with Google+</span> </button>
+            <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span>
+            </button>
+            <button class="btn google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign in with Google+</span>
+            </button>
         </div>
-        <p style="text-align:center"> OR  </p>
-        <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required="" autofocus="">
-        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
+        <p style="text-align:center"> OR </p>
+        <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required=""
+               autofocus="">
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password"
+               required="">
 
         <button class="btn btn-success btn-block" type="submit"><i class="fas fa-sign-in-alt"></i> Sign in</button>
         <a href="#" id="forgot_pswd">Forgot password?</a>
         <hr>
         <!-- <p>Don't have an account!</p>  -->
-        <button class="btn btn-primary btn-block" type="button" id="btn-signup"><i class="fas fa-user-plus"></i> Sign up New Account</button>
+        <button class="btn btn-primary btn-block" type="button" id="btn-signup"><i class="fas fa-user-plus"></i> Sign up
+            New Account
+        </button>
     </form>
 
     <form action="/reset/password/" class="form-reset">
@@ -32,22 +38,29 @@
         <a href="#" id="cancel_reset"><i class="fas fa-angle-left"></i> Back</a>
     </form>
 
-    <form action="/signup/" class="form-signup">
-        <div class="social-login">
-            <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign up with Facebook</span> </button>
-        </div>
-        <div class="social-login">
-            <button class="btn google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign up with Google+</span> </button>
-        </div>
+    <form method="post" class="form-signup">
+<!--        <div class="social-login">-->
+<!--            <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign up with Facebook</span>-->
+<!--            </button>-->
+<!--        </div>-->
+<!--        <div class="social-login">-->
+<!--            <button class="btn google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign up with Google+</span>-->
+<!--            </button>-->
+<!--        </div>-->
 
-        <p style="text-align:center">OR</p>
+        <p style="text-align:center">Sign Up</p>
 
-        <input type="text" id="user-name" class="form-control" placeholder="Full name" required="" autofocus="">
-        <input type="email" id="user-email" class="form-control" placeholder="Email address" required autofocus="">
-        <input type="password" id="user-pass" class="form-control" placeholder="Password" required autofocus="">
-        <input type="password" id="user-repeatpass" class="form-control" placeholder="Repeat Password" required autofocus="">
 
-        <button class="btn btn-primary btn-block" type="submit"><i class="fas fa-user-plus"></i> Sign Up</button>
+        <input type="email" id="user-email" name="email" class="form-control" placeholder="Email address" required
+               autofocus="">
+        <input type="password" id="user-pass" name="password" class="form-control" placeholder="Password" required
+               autofocus="">
+        <input type="password" id="user-repeatpass" class="form-control" placeholder="Repeat Password" required
+               autofocus="">
+        <input type="text" id="user-role" name="role" class="form-control" placeholder="Role 0 or 1" required=""
+               autofocus="">
+
+        <button class="btn btn-primary btn-block" id="signup" type="submit"><i class="fas fa-user-plus"></i> Sign Up</button>
         <a href="#" id="cancel_signup"><i class="fas fa-angle-left"></i> Back</a>
     </form>
     <br>
@@ -76,4 +89,34 @@ $(()=>{
 </p>
 <div th:replace="/fragments/footer :: footer"/>
 </body>
+<script>
+    $(document).ready(function () {
+        function checkPasswordMatch(password,repeatPassword) {
+            return password===repeatPassword;
+        }
+        $("#signup").on('click',function (e) {
+            let password = $("#user-pass").val();
+            let repeat_password = $("#user-repeatpass").val();
+            let  email = $("#user-email").val()
+            let role = $("#user-role").val();
+            if(checkPasswordMatch(password,repeat_password)===true){
+                $.ajax({
+                    url: "/signup",
+                    type: "POST",
+                    contentType: "application/json;charset=utf-8",
+                    data: JSON.stringify({
+                        email: email, password: password, role:role
+                    }),
+                    success: function (result) {
+
+                    },
+                });
+            }else{
+                e.preventDefault();
+                alert("Password not match!");
+            }
+        })
+
+    })
+</script>
 </html>
