--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,7 +48,7 @@
 
                 <!-- show new post only if user is authenticated -->
                 <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-                    <li class="active"><a>New Post</a></li>
+                    <li class="active"><a th:href="@{/newPost}">New Post</a></li>
                 </ul>
 
                 <!-- show sign out only if user is authenticated -->
